# get-text

./: .gitignore  README.md  batch.py  get-text.py  gui.py  init.ps1  init.py  launch.ps1  launch.sh  model.py  process.py  pyproject.toml  requirements.txt  srt.py
